--- a/Information/Views/Infors/Delete.cshtml
+++ b/Information/Views/Infors/Delete.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.publisher)
+            @Html.DisplayNameFor(model => model.Publisher)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.publisher)
+            @Html.DisplayFor(model => model.Publisher)
         </dd>
 
         <dt>
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.content)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.content)
+            @Html.DisplayFor(model => model.Content)
         </dd>
 
     </dl>
