--- a/Information/Views/Shared/_Layout.cshtml
+++ b/Information/Views/Shared/_Layout.cshtml
@@ -1,13 +1,55 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - 我的 ASP.NET 應用程式</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @using Information.Helpers
+
+    @*
+        <script type="text/javascript" language="javascript">
+
+            //chrome無法用onunload, 關閉分頁onbeforeunload無回應
+            var mouse = { x: 0, y: 0 };
+
+            document.addEventListener('mousemove', function (e) {
+                mouse.x = e.clientX || e.pageX;
+                mouse.y = e.clientY || e.pageY
+            }, false);///因為onbeforeunload event.client X Y 會變undefined
+
+            window.onbeforeunload = CloseWindows ;
+
+            function CloseWindows()
+            {
+                //alert(mouse.x + " " + mouse.y);
+                /**/
+                //按下X關閉
+                var closeSignal = Math.floor(mouse.y);
+
+                if (closeSignal <= 0)//
+                {
+                        try
+                        {
+                                var xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+                                //使用者自行關閉視窗時
+                                xmlhttp.open("GET","/Home/Logout", false);
+                                xmlhttp.send();
+                                return '登出成功';
+                        }
+                        catch(e)
+                        {
+                            return 'close windows error message:' + e.message;
+                        }
+                }
+            }
+
+
+        </script>
+    *@
+    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -18,20 +60,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Information", "About", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+                <div class="navbar-brand">Information</div>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <!--<li>@Html.ActionLink("首頁", "Index", "Home")</li>-->
-                    <li>@Html.ActionLink("公告", "About", "Home")</li>
-                    @if (String.IsNullOrWhiteSpace(WebSiteHelper.UserName))
-                    {<li>@Html.ActionLink("登入", "Login", "Home")</li>}
-                    else if (WebSiteHelper.UserName.Equals("admin"))
-                    {<li>@Html.ActionLink("會員", "Index", "Members")</li> }
-                    @if (!String.IsNullOrWhiteSpace(WebSiteHelper.UserName)) {
-                        <li>@Html.ActionLink("登出","Logout","Home")</li>
+
+                    @if (WebSiteHelper.GetFeature().FeatInfor)
+                    {
+                        <li>@Html.ActionLink("公告", "About", "Home")</li>
                     }
+                    @if (WebSiteHelper.GetFeature().FeatLogRec)
+                    {
+                        <li>@Html.ActionLink("登入紀錄", "Index", "LogRecords")</li>
+                    }
+
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
@@ -39,7 +85,7 @@
         @RenderBody()
         <hr />
 
-        
+
         <footer>
             <p>&copy; @DateTime.Now.Year @ViewBag.Title- 我的 ASP.NET 應用程式</p>
         </footer>
@@ -48,5 +94,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    
 </body>
 </html>
