--- a/Information/Views/Home/Login.cshtml
+++ b/Information/Views/Home/Login.cshtml
@@ -8,9 +8,11 @@
 
 @using (Html.BeginForm(FormMethod.Post))
 {
+   @Html.AntiForgeryToken()
     <div class="form-horizontal">
         <h4>Login</h4>
         <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="col-md-10">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label  col-md-2" })
             <div class="col-md-10">
