--- a/Information/Views/Infors/Details.cshtml
+++ b/Information/Views/Infors/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.publisher)
+            @Html.DisplayNameFor(model => model.Publisher)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.publisher)
+            @Html.DisplayFor(model => model.Publisher)
         </dd>
 
         <dt>
@@ -35,11 +35,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.content)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.content)
+            @Html.DisplayFor(model => model.Content)
         </dd>
 
     </dl>
