--- a/Information/Views/Shared/_Layout.cshtml
+++ b/Information/Views/Shared/_Layout.cshtml
@@ -93,6 +93,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="@RouteJs.RouteJsHandler.HandlerUrl"></script>
     @RenderSection("scripts", required: false)
 
     
